--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
-                    <li><a href="">CONTACT</a></li>
                     <li class="hidden-xs hidden-sm"><a style="padding-left:5px;padding-right:5px;"><i class="fa ion-minus fa-rotate-90"></i></a></li>
                     <li>
                         <a href="#" style="padding: 20px 5px;display:inline-block;">
                             <i class="icon ion-android-call"></i>
-                            <span> &nbsp;<a class="phone-number" href=""></a><a class="phone-number" href=""></a></span>
+                            <span> &nbsp;<a class="phone-number" href="tel:+1-416-669-2144">416-669-2144</a></span>
                         </a>
                     </li>
                 </ul>
@@ -40,7 +39,6 @@
         </div>
     </nav>
     <div class="container-fluid header">
-
         <div class="col-sm-5 hidden-xs col-md-5 col-lg-7 div-caption-outer">
             <div class="div-caption">
                 <img src="./assets/img/caption.png" alt="More Business">
@@ -86,7 +84,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-lg-12 text-right">
-                                    <button type="submit" class="btn btn-primary btn-md btn-block">Submit</button>
+                                    <button type="submit" class="btn btn-primary btn-submit btn-block">Submit</button>
                                 </div>
                             </div>
                         </fieldset>
@@ -95,63 +93,27 @@
             </div>
         </div>
     </div>
-    <br>
-    <div class="container-fluid">
-        <div class="col-md-12 text-center">
-            <h2>Our Services</h2>
-        </div>
-    </div>
-    <br>
     <div class="container-fluid services-block">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="container-fluid">
-                <div class="col-sm-12 text-center">
-                    <img src="./assets/img/services-1.png" alt="web">
-                </div>
-                <div class="col-sm-12 text-center">
-                    <h3>Web</h3>
-                    <br>
-                    <p>As you can see our site is simple and to the point - we feel that is what our customers and all customers
-                        want - straight to the point facts and offers. We have helped establish companies from Zero Dollars
-                        in Sales to 6 Figure Sales - all with our systems.</p>
-                </div>
-
+        <div class="container-fluid">
+            <div class="col-md-12 text-center">
+                <h2>Our Services</h2>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="container-fluid">
-                <div class="col-sm-12 text-center">
-                    <img src="./assets/img/services-2.png" alt="web">
-                </div>
-                <div class="col-sm-12 text-center">
-                    <h3>Search</h3>
-                    <br>
-                    <p> We will contuniually montior and promote your company using various SEM/SEO tools. The great thing is
-                        none of this will cost you more that what you are paying for advertising in newapapers and delivering
-                        flyers - plus you get the added benifit of knowing that if we get you no results you will get your
-                        money back.</p>
-                </div>
-
+        <div class="container-fluid">
+            <div class="col-lg-6 col-sm-8">
+                <p>We are Shopper Media Inc based out of Mississauga, Ontario. As you can see our site is simple and to the
+                    point - we feel that is what our customers and all customers want - straight to the point facts and offers.
+                    We have helped establish companies from Zero Dollars in Sales to 6 Figure Sales - all with our systems.</p>
+                <p>Our team has diplomas and degrees in Marketing - this is what we do - we got you to our page and we will
+                    get your customers to your page! If you succeed we succeed - we are willing to take the risks to market
+                    your business so you can grow and service your customers and not worry about new where new business will
+                    come from - we are here for that. Give us one oppurtunity and you will be a customer for life!</p>
+            </div>
+            <div class="col-lg-1 hidden-sm"></div>
+            <div class="col-lg-5 col-sm-4">
+                <img src="./assets/img/services.png" alt="about us" width="100%">
             </div>
         </div>
-        <div class="col-sm-3 col-md-3 hidden-lg hidden-xs"></div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <div class="container-fluid">
-                <div class="col-sm-12 text-center">
-                    <img src="./assets/img/services-3.png" alt="web">
-                </div>
-                <div class="col-sm-12 text-center">
-                    <h3>Social Media</h3>
-                    <br>
-                    <p>We will provide your company with a full marketing place based on your business needs - we will expand
-                        your online presence including setting up a new website and social media accounts. so you have nothing
-                        to lose and everything to gain - both our success as companies is tied together. No Risks all rewards
-                        for you.</p>
-                </div>
-
-            </div>
-        </div>
-        <div class="col-sm-3 col-md-3 hidden-lg hidden-xs"></div>
     </div>
     <div class="container-fluid matter-block">
         <div class="col-lg-5 col-sm-4">
