--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-                <a class="navbar-brand remove-padding" href="index.html">
+                <a class="navbar-brand remove-padding" style="margin-left: -100px;" href="index.html">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 577.59 573.78">
                         <defs>
                             <style>
