--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 577.59 573.78">
                         <defs>
                             <style>
+                                @import url("./assets/fonts/font.css");
                                 .main-group {
                                     isolation: isolate;
                                 }
@@ -224,7 +225,7 @@
                                 .brandName {
                                     font-size: 150px;
                                     fill: #323746;
-                                    font-family: Montserrat-Regular, Montserrat;
+                                    font-family: 'Montserrat';
                                 }
 
                                 .cls-39 {
@@ -337,7 +338,115 @@
     <div class="container-fluid header">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 div-caption-outer">
             <div class="div-caption">
-                <img src="./assets/img/caption.png" alt="More Business">
+                <div class="container-fluid">
+                    <div class="col-lg-12 text-center">
+                        <img src="./assets/img/caption.png" alt="More Business">
+                    </div>
+                    <div class="col-lg-12 text-center remove-padding">
+                        <div class="little-slider-outer">
+                            <div id="littleCarousel" class="carousel slide hidden-xs" data-ride="carousel" data-interval="2000">
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner">
+                                    <div class="item active">
+                                        <div class="container-fluid little-slider">
+                                            <ul>
+                                                <li><img src="./assets/img/google.png" alt="Google"></li>
+                                                <li><img src="./assets/img/facebook.png" alt="Facebook"></li>
+                                                <li><img src="./assets/img/bing.png" alt="Bing"></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="item">
+                                        <div class="container-fluid little-slider">
+                                            <ul>
+                                                <li><img src="./assets/img/yahoo.png" alt="Yahoo"></li>
+                                                <li><img src="./assets/img/pinterest.png" alt="Pinterest"></li>
+                                                <li><img src="./assets/img/twitter.png" alt="Twitter"></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="container-fluid little-slider">
+                                            <ul>
+                                                <li><img src="./assets/img/craigslist.png" alt="Craigslist"></li>
+                                                <li><img src="./assets/img/snapchat.png" alt="Snapchat"></li>
+                                                <li><img src="./assets/img/instagram.png" alt="Instagram"></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Left and right controls -->
+                                <a class="left carousel-control" href="#littleCarousel" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#littleCarousel" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                            <div class="visible-xs">
+                                <div id="littleCarousel2" class="carousel slide" data-ride="carousel" data-interval="2000">
+                                    <!-- Wrapper for slides -->
+                                    <div class="carousel-inner">
+                                        <div class="item active">
+                                            <div class="container-fluid little-slider">
+                                                <ul>
+                                                    <li><img src="./assets/img/google.png" alt="Google"></li>
+                                                    <li><img src="./assets/img/facebook.png" alt="Facebook"></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="item">
+                                            <div class="container-fluid little-slider">
+                                                <ul>
+                                                    <li><img src="./assets/img/bing.png" alt="Bing"></li>
+                                                    <li><img src="./assets/img/yahoo.png" alt="Yahoo"></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="container-fluid little-slider">
+                                                <ul>
+                                                    <li><img src="./assets/img/pinterest.png" alt="Pinterest"></li>
+                                                    <li><img src="./assets/img/twitter.png" alt="Twitter"></li>
+
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="container-fluid little-slider">
+                                                <ul>
+                                                    <li><img src="./assets/img/craigslist.png" alt="Craigslist"></li>
+                                                    <li><img src="./assets/img/snapchat.png" alt="Snapchat"></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="container-fluid little-slider">
+                                                <ul>
+                                                    <li><img src="./assets/img/twitter.png" alt="Twitter"></li>
+                                                    <li><img src="./assets/img/instagram.png" alt="Instagram"></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Left and right controls -->
+                                    <a class="left carousel-control" href="#littleCarousel2" data-slide="prev">
+                                        <span class="glyphicon glyphicon-chevron-left"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="right carousel-control" href="#littleCarousel2" data-slide="next">
+                                        <span class="glyphicon glyphicon-chevron-right"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -377,7 +486,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-12">
-                                <input type="address" class="form-control" name="Home_address" placeholder="Your Business Name" required>
+                                <input type="text" class="form-control" name="business" placeholder="Your Business Name" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -387,7 +496,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-12">
-                                <input type="text" class="form-control" name="Email_address" placeholder="Email" required>
+                                <input type="email" class="form-control" name="Email_address" placeholder="Email" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -408,6 +517,17 @@
                         </div>
                     </fieldset>
                 </form>
+                <div class="form-hide">
+                    <div class="panel panel-default" style="width:70%;">
+                        <div class="panel-heading text-center" style="line-height:0px;">
+                            <h3 class="text-success"><i class="ion-ios-checkmark-outline text-success"></i> Message Sent</h3>
+                        </div>
+                        <div class="panel-body text-center">
+                            <p style="color:#212121">Thank you for contacting Shopper Media Inc. <br> A team member will be in touch with you
+                                shortly.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-lg-7 col-sm-8">
