--- a/index.html
+++ b/index.html
@@ -568,11 +568,11 @@
     <footer>
         <div class="container-fuild remove-padding">
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6">
-                <small class="text-center text-default copyrights">Copyright 2017 <a href="./index.html">iwantmorecustomers.com</a>. <br class="hidden-md hidden-lg">All Rights Reserved.</small>
+                <small class="text-center text-default copyrights">Copyright 2017 <a href="./index.html">iwantmorecustomers.ca</a>. <br class="hidden-md hidden-lg">All Rights Reserved.</small>
             </div>
             <div class="hidden-sm hidden-xs col-lg-3 col-md-4"></div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 social-block">
-                <div class="col-xs-3 col-sm-3 text-center social-block-icon" onclick="window.open('https://www.facebook.com/cursivehomenumbers/','_blank')"><i class="icon ion-social-facebook"></i></div>
+                <div class="col-xs-3 col-sm-3 text-center social-block-icon"><i class="icon ion-social-facebook"></i></div>
                 <div class="col-xs-3 col-sm-3 text-center social-block-icon"><i class="icon ion-social-googleplus"></i></div>
                 <div class="col-xs-3 col-sm-3 text-center social-block-icon"><i class="icon ion-social-twitter"></i></div>
             </div>
